--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "bitexpert/magento2-force-customer-login",
   "description": "The Force Login module for Magento2 redirects a storefront visitor to the Magento2 Frontend login page, if the visitor is not logged in. It is possible to configure the whitelisted urls to add custom definitions.",
   "type": "magento2-module",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "minimum-stability": "stable",
   "license": "Apache-2.0",
   "authors": [
@@ -18,7 +18,7 @@
     }
   ],
   "require": {
-    "php": "~7.3.0|~7.4.0|~8.1.0",
+    "php": "~7.3.0|~7.4.0|~8.1.0|~8.2.0",
     "magento/framework": "~103.0.0|~103.0.1|~103.0.2|~103.0.3|~103.0.4|~103.0.5",
     "magento/module-backend": "~102.0.0|~102.0.1|~102.0.2|~102.0.3|~102.0.4|~102.0.5",
     "magento/module-customer": "~103.0.0|~103.0.1|~103.0.2|~103.0.3|~103.0.4|~103.0.5",
